2005-07-22 arne

	* quartz: little optimization in CDrawContext::beginCGContext
	* quartz: cleaned up the event handler
	* stop advancing focus if the last focusable control has focus.

2005-07-22 arne

	* fixed a regression bug in AEffGUIEditor, where idle() was not called
	* only CKnob and CSlider want focus, as they are the only controls handling key strokes.

2005-07-14 arne

	* moved CFileSelector in its own file
	* quartz: fixed some bugs with COffscreenContext

2005-07-09 arne

	* the CView::draw method now draws the background image if it has one.
	* new CFrame::updatesDisabled method to lock idle updates.
	* bug fix for overlapping control drawing.
	* add a style to COnOffButton so that the listener can be called before doIdleStuff is called.

2005-07-02 arne

	* windows: CFrame uses a backbuffer now when USE_ALPHA_BLEND is on. This fixes a performance issue with some graphic cards.
				The drawback at the moment is, that drawing can only occur when the CFrame calls the views to draw. You can not draw anymore
				by creating your own drawcontext.

2005-06-25 arne

	* adding keyboard focus navigation
	* add bool bWantsFocus to CView. If this is set the view is included in keyboard focus navigation.

2005-06-24 arne

	* merge newframe back to main
	* fixed some gcc warnings

2005-05-13 arne

	* quartz: if the CFrame is embedded into a window composited window, the setSize(..) method does not resize the window anymore.
	* quartz: some window compositing fixes
	* the tabs in a CTabView can be aligned
	* mac os x: quartz will be used per default now

2005-05-05 arne

	* added CBitmap::setNoAlpha(..) and CBitmap::getNoAlpha(). You can set this for PNG images which don't have an alpha channel to speed up drawing on windows.
	* quartz: some window compositing fixes

2005-04-30 arne

	* windows: with libpng, when a bmp image was loaded, don't use AlphaBlend instead use old BitBlt.
	* quartz: non png images can be drawn with transparent color again.

2005-04-29 arne